--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/third-parties": "^15.1.7",
     "@opentelemetry/api": "^1.9.0",
     "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.4",
     "@radix-ui/react-select": "^2.1.6",
