--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@saleor/auth-sdk": "^1.0.1",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "country-state-city": "^3.2.1",
+    "crypto-js": "^4.2.0",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "firebase-admin": "^13.1.0",
@@ -44,6 +46,7 @@
     "@graphql-codegen/cli": "^5.0.4",
     "@graphql-codegen/client-preset": "^4.6.0",
     "@graphql-typed-document-node/core": "^3.2.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
