added payment gateway

--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@saleor/auth-sdk": "^1.0.1",
+    "@saleor/auth-sdk": "^1.0.2",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "country-state-city": "^3.2.1",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "firebase-admin": "^13.1.0",
+    "icici-dev": "^2.1.7",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.474.0",
     "next": "^15.1.7",
     "react": "^19.0.0",
@@ -47,6 +50,7 @@
     "@graphql-codegen/client-preset": "^4.6.0",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@types/crypto-js": "^4.2.2",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
